antsa, zanda, novonote as defaults in table

--- a/comparisons/table.html
+++ b/comparisons/table.html
@@ -403,6 +403,126 @@
 
           {
             id: 2,
+            name: "Zanda Health",
+            link: {
+              label: "See more",
+              url: "https://zandahealth.com/?fpr=david67",
+            },
+            appCompliance: true,
+            dataStorage:
+              "Australia (For Aus users). Stored according to the practice's location",
+            freeMembership: false,
+            freeTrial: "14 days",
+            pmsIntegration:
+              "The tool is built natively within the Zanda practice management system",
+            uniqueFeatures: {
+              sections: [
+                {
+                  category: "Purpose-built",
+                  items: [
+                    "Purpose-built for psychologists and allied health professionals",
+                    "Ability to set custom note output preferences per user",
+                    "Seamlessly integrated with the client profile in Zanda - no copying and pasting required",
+                    "Free usage of the refine tool to make changes to the note using AI",
+                    "Custom retention period for transcript storage",
+                    "Usage report to see recording time per user in a specific date range",
+                    "Compliant with Australian privacy and security regulation, and ISO 27001 certified",
+                  ],
+                },
+              ],
+            },
+            coreFeatures: {
+              sections: [
+                {
+                  category: "Transcription & Notes",
+                  items: [
+                    "Real-time transcription",
+                    "Ability to add typed context notes while transcribing",
+                    "Fully customisable note templates",
+                    "Per user custom note preferences to control the note formatting, style and more",
+                    "Option to refine the note using AI",
+                  ],
+                },
+              ],
+            },
+            pricing:
+              "Our AI Refine tool is free for all users. Transcription is invoiced based on actual use at $1 +gst per hour (prorata).",
+            telehealth: {
+              available: true,
+              note: "Yes, if you use speaker mode on your device for the audio. We are working with Zoom to provide an option where headphones can be used.",
+            },
+            headphonesCompatible: true,
+            mobileCompatible: true,
+            multipleNotes: "Under development",
+            aiTrainableOverTime: "This is on our roadmap.",
+            languagesSupported: "Currently only available in English.",
+          },
+
+          {
+            id: 3,
+            name: "NovoNote by NovoPsych",
+            link: { label: "See more", url: "https://novopsych.com/novonote/" },
+            appCompliance: true,
+            dataStorage: "Australia",
+            freeMembership: true,
+            freeTrial: "15 day trial",
+            pmsIntegration:
+              "Copy and paste into practice management software. Integration with NovoPsych",
+            uniqueFeatures: {
+              sections: [
+                {
+                  category: "Designed for Mental Health",
+                  items: [
+                    "Specifically designed for mental health practitioners by the team at NovoPsych",
+                    "Multi session reports (combine multiple sessions)",
+                    "Psychometric integration (reports blend therapy content + psychometrics)",
+                    "Large library of report templates",
+                    "Customisable templates",
+                    "Context editing after the fact (add context later and regenerate)",
+                  ],
+                },
+              ],
+            },
+            coreFeatures: {
+              sections: [
+                {
+                  category: "Documentation & Templates",
+                  items: [
+                    "In Session Transcription",
+                    "Document and note generation",
+                    "Dictation of notes",
+                    "Mental health specific template library",
+                    "Custom templates",
+                  ],
+                },
+                {
+                  category: "Integrations & Platform",
+                  items: [
+                    "Integration with NovoPsych Psychometrics",
+                    "Practice Plans for teams",
+                    "Telehealth Support",
+                    "Works on computers, phones and tablets",
+                  ],
+                },
+              ],
+            },
+            pricing: {
+              prices: [
+               
+                "$30, $60, $99, Depending on client load.",
+                "All NovoNote plans include access to NovoPsych Psychometrics",
+              ],
+            },
+            telehealth: true,
+            headphonesCompatible: "Not sure",
+            mobileCompatible: "Accessible on any device via your web browser (desktop, tablet, mobile)",
+            multipleNotes: true,
+            aiTrainableOverTime: true,
+            languagesSupported: "Primarily English",
+          },
+
+          {
+            id: 4,
             name: "Bastion GPT",
             link: {
               label: "30 day free trial",
@@ -459,7 +579,7 @@
           },
 
           {
-            id: 3,
+            id: 5,
             name: "Patient Notes",
             link: {
               label: "10% Discount",
@@ -566,7 +686,7 @@
             },
           },
           {
-            id: 4,
+            id: 6,
             name: "Heidi Health",
             link: {
               label: "30 day free trial",
@@ -663,126 +783,6 @@
             },
           },
           {
-            id: 5,
-            name: "Zanda Health",
-            link: {
-              label: "See more",
-              url: "https://zandahealth.com/?fpr=david67",
-            },
-            appCompliance: true,
-            dataStorage:
-              "Australia (For Aus users). Stored according to the practice's location",
-            freeMembership: false,
-            freeTrial: "14 days",
-            pmsIntegration:
-              "The tool is built natively within the Zanda practice management system",
-            uniqueFeatures: {
-              sections: [
-                {
-                  category: "Purpose-built",
-                  items: [
-                    "Purpose-built for psychologists and allied health professionals",
-                    "Ability to set custom note output preferences per user",
-                    "Seamlessly integrated with the client profile in Zanda - no copying and pasting required",
-                    "Free usage of the refine tool to make changes to the note using AI",
-                    "Custom retention period for transcript storage",
-                    "Usage report to see recording time per user in a specific date range",
-                    "Compliant with Australian privacy and security regulation, and ISO 27001 certified",
-                  ],
-                },
-              ],
-            },
-            coreFeatures: {
-              sections: [
-                {
-                  category: "Transcription & Notes",
-                  items: [
-                    "Real-time transcription",
-                    "Ability to add typed context notes while transcribing",
-                    "Fully customisable note templates",
-                    "Per user custom note preferences to control the note formatting, style and more",
-                    "Option to refine the note using AI",
-                  ],
-                },
-              ],
-            },
-            pricing:
-              "Our AI Refine tool is free for all users. Transcription is invoiced based on actual use at $1 +gst per hour (prorata).",
-            telehealth: {
-              available: true,
-              note: "Yes, if you use speaker mode on your device for the audio. We are working with Zoom to provide an option where headphones can be used.",
-            },
-            headphonesCompatible: true,
-            mobileCompatible: true,
-            multipleNotes: "Under development",
-            aiTrainableOverTime: "This is on our roadmap.",
-            languagesSupported: "Currently only available in English.",
-          },
-
-          {
-            id: 6,
-            name: "NovoNote by NovoPsych",
-            link: { label: "See more", url: "https://novopsych.com/novonote/" },
-            appCompliance: true,
-            dataStorage: "Australia",
-            freeMembership: true,
-            freeTrial: "15 day trial",
-            pmsIntegration:
-              "Copy and paste into practice management software. Integration with NovoPsych",
-            uniqueFeatures: {
-              sections: [
-                {
-                  category: "Designed for Mental Health",
-                  items: [
-                    "Specifically designed for mental health practitioners by the team at NovoPsych",
-                    "Multi session reports (combine multiple sessions)",
-                    "Psychometric integration (reports blend therapy content + psychometrics)",
-                    "Large library of report templates",
-                    "Customisable templates",
-                    "Context editing after the fact (add context later and regenerate)",
-                  ],
-                },
-              ],
-            },
-            coreFeatures: {
-              sections: [
-                {
-                  category: "Documentation & Templates",
-                  items: [
-                    "In Session Transcription",
-                    "Document and note generation",
-                    "Dictation of notes",
-                    "Mental health specific template library",
-                    "Custom templates",
-                  ],
-                },
-                {
-                  category: "Integrations & Platform",
-                  items: [
-                    "Integration with NovoPsych Psychometrics",
-                    "Practice Plans for teams",
-                    "Telehealth Support",
-                    "Works on computers, phones and tablets",
-                  ],
-                },
-              ],
-            },
-            pricing: {
-              prices: [
-               
-                "$30, $60, $99, Depending on client load.",
-                "All NovoNote plans include access to NovoPsych Psychometrics",
-              ],
-            },
-            telehealth: true,
-            headphonesCompatible: "Not sure",
-            mobileCompatible: "Accessible on any device via your web browser (desktop, tablet, mobile)",
-            multipleNotes: true,
-            aiTrainableOverTime: true,
-            languagesSupported: "Primarily English",
-          },
-
-          {
             id: 7,
             name: "Uplift AI",
             link: { label: "See more", url: "https://www.upliftgroup.ai/" },
@@ -825,7 +825,6 @@
             aiTrainableOverTime: true,
             languagesSupported: "Not currently. It will in future development.",
           },
-
           {
             id: 8,
             name: "Everbility",
@@ -961,7 +960,7 @@
         let activeFilters = Object.fromEntries(
           FILTER_GROUPS.map((g) => [g, []])
         );
-        let comparedItemIds = [];
+        let comparedItemIds = [1,2,3];
 
         // --- DOM ---
         const filterBtn = document.getElementById("filter-btn");
