--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,264 +3,269 @@ layout: default
 title: AI Scribe Savings Calculator
 ---
 
-<div class="container two-col-grid two-col-grid-calculator">
-  <section class="left-panel">
-    <div class="sticky-calculator">
-      <header class="text-center mb-8">
-        <h1 class="section-title">
-          AI Scribe <span class="section-title-accent">Calculator</span>
-        </h1>
-        <p class="section-subtitle">Calculate your potential savings</p>
-      </header>
-
-      <section class="card">
-        <h2 class="card-title">Enter Your Details</h2>
-        <form id="calculator-form" class="space-y-3">
-          <div class="form-group">
-            <label for="hourly-rate" class="form-label">Hourly Rate ($)</label>
-            <input
-              type="number"
-              id="hourly-rate"
-              class="form-input"
-              placeholder="e.g., 100"
-              required
-              min="1"
-              step="0.01"
-            />
-          </div>
-          <div class="form-group">
-            <label for="time-saved" class="form-label"
-              >Time Saved Per Hour (minutes)</label
-            >
-            <input
-              type="number"
-              id="time-saved"
-              class="form-input"
-              placeholder="e.g., 15"
-              required
-              min="1"
-              max="60"
-            />
-          </div>
-          <div class="form-group">
-            <label for="daily-hours" class="form-label"
-              >Daily Working Hours</label
-            >
-            <input
-              type="number"
-              id="daily-hours"
-              class="form-input"
-              placeholder="e.g., 8"
-              required
-              min="1"
-              max="24"
-            />
-          </div>
-          <div class="form-group">
-            <label for="annual-weeks" class="form-label"
-              >Annual Working Weeks</label
-            >
-            <input
-              type="number"
-              id="annual-weeks"
-              class="form-input"
-              placeholder="e.g., 50"
-              required
-              min="1"
-              max="52"
-            />
-          </div>
-          <button type="submit" class="btn w-100 justify-center">
-            Calculate Savings
-          </button>
-        </form>
-      </section>
-
-      <section class="calc-footer mt-8">
-        For more information on AI Scribes see the <br /><a
-          href="../comparisons/"
-          style="text-decoration: underline"
-          >AI Scribe Comparison Table</a
-        >
-      </section>
-    </div>
-  </section>
-
-  <aside class="right-panel">
-    <section
-      class="card text-center sticky-calculator sticky-calculator--placeholder"
-      id="placeholder-content"
-    >
-      <div class="card-icon text-lg">📊</div>
-      <h2 class="card-title">Discover Your Savings Potential</h2>
-      <p class="card-text">
-        Our AI Scribe Savings Calculator helps healthcare professionals, legal
-        teams, and other professionals understand the time and cost benefits of
-        implementing AI transcription technology.
-        <br /><br />
-        Simply enter your details on the left to see personalized calculations
-        of how much time and money you could save annually with AI-powered
-        transcription services.
+<div class="container">
+  <header class="title-container mb-24">
+    <div class="title-content-centered">
+      <h1 class="main-title">
+        AI Scribe <span class="section-title-accent">Calculator</span>
+      </h1>
+      <p class="main-subtitle">
+        Calculate your potential savings with AI transcription technology.
       </p>
-    </section>
-
-    <div
-      class="results-content"
-      id="results-content"
-      role="region"
-      aria-live="polite"
-    >
-      <section class="card mb-4">
-        <div class="flex items-center gap-1 mb-2">
-          <div class="card-icon">⏰</div>
-          <h2 class="card-title">Time Savings</h2>
-        </div>
-        <div class="auto-grid-300">
-          <div class="card-alt card-alt-calculator">
-            <div class="text-sm text-muted">Daily</div>
-            <div class="text-lg" id="daily-time">-</div>
-          </div>
-          <div class="card-alt card-alt-calculator">
-            <div class="text-sm text-muted">Weekly</div>
-            <div class="text-lg" id="weekly-time">-</div>
-          </div>
-          <div class="card-alt card-alt-calculator">
-            <div class="text-sm text-muted">Annual</div>
-            <div class="text-lg" id="annual-time">-</div>
-          </div>
-        </div>
-        <p
-          class="section-text-alt section-text-alt-calculator mt-8"
-          id="time-description"
-        >
-          -
+    </div>
+  </header>
+  <div class="two-col-grid" id="calculator">
+        <aside class="left-panel">
+      <section
+        class="card text-center sticky-calculator sticky-calculator--placeholder"
+        id="placeholder-content"
+      >
+        <div class="card-icon text-lg">📊</div>
+        <h2 class="card-title">Discover Your Savings Potential</h2>
+        <p class="card-text">
+          Our AI Scribe Savings Calculator helps healthcare professionals, legal
+          teams, and other professionals understand the time and cost benefits of
+          implementing AI transcription technology.
+          <br /><br />
+          Simply enter your details on the left to see personalized calculations
+          of how much time and money you could save annually with AI-powered
+          transcription services.
         </p>
       </section>
 
-      <section class="card mb-4">
-        <div class="flex items-center gap-1 mb-2">
-          <div class="card-icon">💰</div>
-          <h2 class="card-title">Monetary Value</h2>
-        </div>
-        <div class="auto-grid-300">
-          <div class="card-alt card-alt-calculator">
-            <div class="text-sm text-muted">Daily</div>
-            <div class="text-lg" id="daily-money">-</div>
+      <div
+        class="results-content"
+        id="results-content"
+        role="region"
+        aria-live="polite"
+      >
+        <section class="card mb-4">
+          <div class="flex items-center gap-1 mb-2">
+            <div class="card-icon">⏰</div>
+            <h2 class="card-title">Time Savings</h2>
           </div>
-          <div class="card-alt card-alt-calculator">
-            <div class="text-sm text-muted">Weekly</div>
-            <div class="text-lg" id="weekly-money">-</div>
+          <div class="auto-grid-300">
+            <div class="card-alt card-alt-calculator">
+              <div class="text-sm text-muted">Daily</div>
+              <div class="text-lg" id="daily-time">-</div>
+            </div>
+            <div class="card-alt card-alt-calculator">
+              <div class="text-sm text-muted">Weekly</div>
+              <div class="text-lg" id="weekly-time">-</div>
+            </div>
+            <div class="card-alt card-alt-calculator">
+              <div class="text-sm text-muted">Annual</div>
+              <div class="text-lg" id="annual-time">-</div>
+            </div>
           </div>
-          <div class="card-alt card-alt-calculator">
-            <div class="text-sm text-muted">Annual</div>
-            <div class="text-lg" id="annual-money">-</div>
-          </div>
-        </div>
-        <p
-          class="section-text-alt section-text-alt-calculator mt-8"
-          id="money-description"
-        >
-          -
-        </p>
-      </section>
+          <p
+            class="section-text-alt section-text-alt-calculator mt-8"
+            id="time-description"
+          >
+            -
+          </p>
+        </section>
 
-      <section class="card mb-4">
-        <h3 class="card-title">Work Time Comparison</h3>
-        <p class="text-sm text-muted text-center">
-          Annual working hours with and without AI scribe
-        </p>
-        <div class="bar-chart">
-          <div class="bar">
-            <div class="bar-value" id="without-value">-</div>
-            <div class="bar-fill-container">
+        <section class="card mb-4">
+          <div class="flex items-center gap-1 mb-2">
+            <div class="card-icon">💰</div>
+            <h2 class="card-title">Monetary Value</h2>
+          </div>
+          <div class="auto-grid-300">
+            <div class="card-alt card-alt-calculator">
+              <div class="text-sm text-muted">Daily</div>
+              <div class="text-lg" id="daily-money">-</div>
+            </div>
+            <div class="card-alt card-alt-calculator">
+              <div class="text-sm text-muted">Weekly</div>
+              <div class="text-lg" id="weekly-money">-</div>
+            </div>
+            <div class="card-alt card-alt-calculator">
+              <div class="text-sm text-muted">Annual</div>
+              <div class="text-lg" id="annual-money">-</div>
+            </div>
+          </div>
+          <p
+            class="section-text-alt section-text-alt-calculator mt-8"
+            id="money-description"
+          >
+            -
+          </p>
+        </section>
+
+        <section class="card mb-4">
+          <h3 class="card-title">Work Time Comparison</h3>
+          <p class="text-sm text-muted text-center">
+            Annual working hours with and without AI scribe
+          </p>
+          <div class="bar-chart">
+            <div class="bar">
+              <div class="bar-value" id="without-value">-</div>
+              <div class="bar-fill-container">
+                <div
+                  class="bar-fill without"
+                  id="without-bar"
+                  style="height: 100%"
+                ></div>
+              </div>
+              <div class="bar-label">Without AI</div>
+            </div>
+            <div class="bar">
+              <div class="bar-value" id="with-value">-</div>
+              <div class="bar-fill-container">
+                <div class="bar-fill" id="with-bar" style="height: 1%"></div>
+              </div>
+              <div class="bar-label">With AI</div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card mb-4">
+          <h3 class="card-title">Efficiency Metrics</h3>
+          <p class="text-sm text-muted text-center">
+            Productivity improvement breakdown
+          </p>
+          <div class="progress-item">
+            <div class="flex justify-between items-center mb-1">
+              <span class="text-sm">Time Savings Per Hour</span>
+              <span class="text-gold" id="time-percentage">-</span>
+            </div>
+            <div class="progress-bar">
               <div
-                class="bar-fill without"
-                id="without-bar"
-                style="height: 100%"
+                class="progress-fill"
+                id="time-progress"
+                style="width: 0%"
               ></div>
             </div>
-            <div class="bar-label">Without AI</div>
           </div>
-          <div class="bar">
-            <div class="bar-value" id="with-value">-</div>
-            <div class="bar-fill-container">
-              <div class="bar-fill" id="with-bar" style="height: 1%"></div>
+          <div class="progress-item">
+            <div class="flex justify-between items-center mb-1">
+              <span class="text-sm">Work Time Recovered</span>
+              <span class="text-gold" id="recovery-percentage-text">-</span>
             </div>
-            <div class="bar-label">With AI</div>
+            <div class="progress-bar">
+              <div
+                class="progress-fill"
+                id="recovery-progress"
+                style="width: 0%"
+              ></div>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="card mb-4">
-        <h3 class="card-title">Efficiency Metrics</h3>
-        <p class="text-sm text-muted text-center">
-          Productivity improvement breakdown
-        </p>
-        <div class="progress-item">
-          <div class="flex justify-between items-center mb-1">
-            <span class="text-sm">Time Savings Per Hour</span>
-            <span class="text-gold" id="time-percentage">-</span>
+        <section class="card">
+          <h3 class="card-title">Time Recovery</h3>
+          <p class="text-sm text-muted text-center">
+            Total work time that can be recovered
+          </p>
+          <div class="donut-chart">
+            <svg class="donut-svg" viewBox="0 0 42 42">
+              <circle
+                cx="21"
+                cy="21"
+                r="15.915"
+                fill="transparent"
+                stroke="var(--card-bg-alt)"
+                stroke-width="3"
+              ></circle>
+              <circle
+                cx="21"
+                cy="21"
+                r="15.915"
+                fill="transparent"
+                stroke="var(--primary-gold)"
+                stroke-width="3"
+                stroke-dasharray="0 100"
+                stroke-linecap="round"
+                id="donut-progress"
+                transform="rotate(-90 21 21)"
+              ></circle>
+            </svg>
+            <div class="donut-center">
+              <div class="donut-value" id="recovery-percentage">0%</div>
+              <div class="donut-label">Recovered</div>
+            </div>
           </div>
-          <div class="progress-bar">
-            <div
-              class="progress-fill"
-              id="time-progress"
-              style="width: 0%"
-            ></div>
-          </div>
-        </div>
-        <div class="progress-item">
-          <div class="flex justify-between items-center mb-1">
-            <span class="text-sm">Work Time Recovered</span>
-            <span class="text-gold" id="recovery-percentage-text">-</span>
-          </div>
-          <div class="progress-bar">
-            <div
-              class="progress-fill"
-              id="recovery-progress"
-              style="width: 0%"
-            ></div>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
+    </aside>
+    <section class="right-panel">
+      <div class="sticky-calculator">
+        <section class="card">
+          <h2 class="card-title">Enter Your Details</h2>
+          <form id="calculator-form" class="space-y-3">
+            <div class="form-group">
+              <label for="hourly-rate" class="form-label">Hourly Rate ($)</label>
+              <input
+                type="number"
+                id="hourly-rate"
+                class="form-input"
+                placeholder="e.g., 100"
+                required
+                min="1"
+                step="0.01"
+              />
+            </div>
+            <div class="form-group">
+              <label for="time-saved" class="form-label"
+                >Time Saved Per Hour (minutes)</label
+              >
+              <input
+                type="number"
+                id="time-saved"
+                class="form-input"
+                placeholder="e.g., 15"
+                required
+                min="1"
+                max="60"
+              />
+            </div>
+            <div class="form-group">
+              <label for="daily-hours" class="form-label"
+                >Daily Working Hours</label
+              >
+              <input
+                type="number"
+                id="daily-hours"
+                class="form-input"
+                placeholder="e.g., 8"
+                required
+                min="1"
+                max="24"
+              />
+            </div>
+            <div class="form-group">
+              <label for="annual-weeks" class="form-label"
+                >Annual Working Weeks</label
+              >
+              <input
+                type="number"
+                id="annual-weeks"
+                class="form-input"
+                placeholder="e.g., 50"
+                required
+                min="1"
+                max="52"
+              />
+            </div>
+            <button type="submit" class="btn w-100 justify-center">
+              Calculate Savings
+            </button>
+          </form>
+        </section>
 
-      <section class="card">
-        <h3 class="card-title">Time Recovery</h3>
-        <p class="text-sm text-muted text-center">
-          Total work time that can be recovered
-        </p>
-        <div class="donut-chart">
-          <svg class="donut-svg" viewBox="0 0 42 42">
-            <circle
-              cx="21"
-              cy="21"
-              r="15.915"
-              fill="transparent"
-              stroke="var(--card-bg-alt)"
-              stroke-width="3"
-            ></circle>
-            <circle
-              cx="21"
-              cy="21"
-              r="15.915"
-              fill="transparent"
-              stroke="var(--primary-gold)"
-              stroke-width="3"
-              stroke-dasharray="0 100"
-              stroke-linecap="round"
-              id="donut-progress"
-              transform="rotate(-90 21 21)"
-            ></circle>
-          </svg>
-          <div class="donut-center">
-            <div class="donut-value" id="recovery-percentage">0%</div>
-            <div class="donut-label">Recovered</div>
-          </div>
-        </div>
-      </section>
-    </div>
-  </aside>
+        <section class="calc-footer mt-8 mb-8">
+          For more information on AI Scribes see the <br /><a
+            href="../comparisons/"
+            style="text-decoration: underline"
+            >AI Scribe Comparison Table</a
+          >
+        </section>
+      </div>
+    </section>
 
+
+  </div>
   <script>
     // initial state
     toggleResultsVisibility(false);
@@ -430,9 +435,8 @@ title: AI Scribe Savings Calculator
       }, 1000);
     }
 
-    document
-      .getElementById("calculator-form")
-      .addEventListener("submit", function (e) {
+    const calculatorForm = document.getElementById("calculator-form");
+    calculatorForm.addEventListener("submit", function (e) {
         e.preventDefault();
 
         const hourlyRate = parseFloat(
@@ -479,6 +483,12 @@ title: AI Scribe Savings Calculator
           updateResults(calculationData);
           updateVisuals(calculationData);
         }, 400);
+
+        console.log(window.innerWidth)
+        window.scrollTo({
+          top: window.innerWidth < 700 ? 190 : 270,
+          behavior: "smooth",
+        });
       });
 
     // Pre-fill with example values
