chore/sub-header-styling-adjustment

--- a/community.html
+++ b/community.html
@@ -654,7 +654,7 @@
                 <div class="logo">Unified <span class="logo-accent">Intelligence</span></div>
                 <div class="logo-underline"></div>
             </div>
-            <div class="tagline">Where Allied Health Meets AI Innovation</div>
+            <div class="tagline">Where Clinicians Meet AI Innovation</div>
         </header>
 
         <main>
