--- a/calculator/index.html
+++ b/calculator/index.html
@@ -23,11 +23,10 @@ title: AI Scribe Savings Calculator
         <div class="card-icon text-lg">📊</div>
         <h2 class="card-title">Discover Your Savings Potential</h2>
         <p class="card-text">
-          Our AI Scribe Savings Calculator helps healthcare professionals, legal
-          teams, and other professionals understand the time and cost benefits
+          Our AI Scribe Savings Calculator helps clinicians understand the time and cost benefits
           of implementing AI transcription technology.
           <br /><br />
-          Simply enter your details on the left to see personalized calculations
+          Simply enter your details on the right panel to see calculations
           of how much time and money you could save annually with AI-powered
           transcription services.          
         </p>
@@ -224,7 +223,7 @@ title: AI Scribe Savings Calculator
             </div>
             <div class="form-group">
               <label for="time-saved" class="form-label"
-                >Minutes Saved from AI Scribe per Hour</label
+                >Minutes Saved from AI Scribe per Hour of Documentation</label
               >
               <input
                 type="number"
