chore/calculator-uplift

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -27,8 +27,7 @@ title: AI Scribe Savings Calculator
           of implementing AI transcription technology.
           <br /><br />
           Simply enter your details on the right panel to see calculations
-          of how much time and money you could save annually with AI-powered
-          transcription services.          
+          of how much time and money you could save annually with AI scribes.          
         </p>
       </section>
 
@@ -95,7 +94,7 @@ title: AI Scribe Savings Calculator
         <section class="card mb-4">
           <h3 class="card-title">Work Time Comparison</h3>
           <p class="text-sm text-muted text-center">
-            Annual working hours with and without AI scribe
+            Annual admin hours with and without AI scribe
           </p>
           <div class="bar-chart">
             <div class="bar">
@@ -119,7 +118,7 @@ title: AI Scribe Savings Calculator
           </div>
         </section>
 
-        <section class="card mb-4">
+        <!-- <section class="card mb-4">
           <h3 class="card-title">Efficiency Metrics</h3>
           <p class="text-sm text-muted text-center">
             Productivity improvement breakdown
@@ -150,9 +149,9 @@ title: AI Scribe Savings Calculator
               ></div>
             </div>
           </div>
-        </section>
+        </section> -->
 
-        <section class="card">
+        <!-- <section class="card">
           <h3 class="card-title">Time Recovery</h3>
           <p class="text-sm text-muted text-center">
             Total work time that can be recovered
@@ -185,7 +184,7 @@ title: AI Scribe Savings Calculator
               <div class="donut-label">Recovered</div>
             </div>
           </div>
-        </section>
+        </section> -->
       </div>
     </aside>
     <section class="right-panel">
@@ -209,7 +208,10 @@ title: AI Scribe Savings Calculator
             </div>
             <div class="form-group">
               <label for="daily-hours" class="form-label"
-                >Hours Spent on Documentation per Week</label
+                >Hours Spent on Documentation per Week             <span class="tooltip">
+              <span class="tooltip-trigger">?</span>
+              <span class="tooltip-text">Total duration you might spend on notes, reports, and other written work tasks in the week</span>
+            </span></label
               >
               <input
                 type="number"
