chore/community-text-update

--- a/community/index.html
+++ b/community/index.html
@@ -672,12 +672,12 @@
                         <div class="feature">
                             <div class="feature-icon">💡</div>
                             <h3>Expert Resources</h3>
-                            <p>Access curated guides, proven frameworks, and cutting-edge tools designed specifically for allied health professionals navigating the AI landscape.</p>
+                            <p>Access an organised community platform and explore hot topics and cutting-edge tools designed specifically for allied health professionals navigating the AI landscape.</p>
                         </div>
                         <div class="feature">
                             <div class="feature-icon">🤝</div>
                             <h3>Collaborative Network</h3>
-                            <p>Connect with industry experts and passionate peers to explore nuanced topics, share experiences, and solve real-world challenges together.</p>
+                            <p>Network with industry experts and passionate peers to explore nuanced topics, share experiences, and solve real-world challenges together.</p>
                         </div>
                         <div class="feature">
                             <div class="feature-icon">⚡</div>
