--- a/community/index.html
+++ b/community/index.html
@@ -711,6 +711,14 @@
                 
                 <form id="waitlistForm">
                     <div class="form-wrapper">
+                        <input
+                            type="text"
+                            name="website"
+                            id="hp"
+                            style="position: absolute; left: -9999px;"
+                            autocomplete="off"
+                            tabindex="-1"
+                        />
                         <div class="form-grid">
                             <input type="text" id="name" placeholder="Your Name" required>
                             <input type="email" id="email" placeholder="Your Email" required>
