fix/url-and-error-messaging

--- a/community/index.html
+++ b/community/index.html
@@ -478,7 +478,7 @@
             transform: translateY(-1px);
         }
 
-        .success-message {
+        .success-message, .error-message {
             display: none;
             background: linear-gradient(135deg, #00A389, #00d4a8);
             padding: 50px 40px;
@@ -489,7 +489,11 @@
             color: #FFFFFF;
         }
 
-        .success-message.show {
+        .error-message {
+            background: linear-gradient(135deg, #FF6B6B, #ff8a8a);
+        }
+
+        .success-message.show, .error-message.show {
             display: block;
         }
 
@@ -773,6 +777,11 @@
                     <h3>Welcome to the Community!</h3>
                     <p>You're on the list. We'll send you an email confirmation and notify you the moment we launch.</p>
                 </div>
+                <div class="error-message" id="errorMessage">
+                    <div class="error-icon">✗</div>
+                    <h3>Something went wrong</h3>
+                    <p>There was an error submitting your waitlist entry. Please contact our support team <a href="mailto:joshkeisler.au@gmail.com">here</a>.</p>
+                </div>
             </div>
         </main>
 
@@ -816,25 +825,22 @@
             }
 
             try {
-                const response = await fetch('/api/circle-waitlist', {
+                const response = await fetch('https://api.aiforclin.com/circle-waitlist', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(waitlistEntry)
                 })
-                const data = await response.json();
-                form.style.display = 'none';
-                successMessage.classList.add('show');
+                if (response.ok) {
+                    form.style.display = 'none';
+                    successMessage.classList.add('show');
+                } else { 
+                    throw new Error(response.statusText); 
+                }
             } catch (error) {
                 console.error('Error submitting waitlist entry:', error);
                 errorMessage.classList.add('show');
             }
-            setTimeout(() => {
-                form.reset();
-                contributorFields.classList.remove('show');
-                form.style.display = 'block';
-                successMessage.classList.remove('show');
-                errorMessage.classList.remove('show');
-            }, 5000);
+     
         });
     </script>
 </body>
